# example-android-bluetooth

./: Cargo.toml  README.md  quad.toml
examples/: discover.rs
java/: MainActivity.java
java/quadbt/: BluetoothLeService.java  QuadBT.java
src/: android.rs  dummy.rs  ios.rs  lib.rs
