[package]
name = "quad-bt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.android]
min_sdk_version = 26

[[package.metadata.android.permission]]
name = "android.permission.BLUETOOTH"
max_sdk_version = 30

[[package.metadata.android.permission]]
name = "android.permission.BLUETOOTH_ADMIN"

[[package.metadata.android.permission]]
name = "android.permission.ACCESS_FINE_LOCATION"

[[package.metadata.android.permission]]
name = "android.permission.BLUETOOTH_SCAN"

[[package.metadata.android.permission]]
name = "android.permission.BLUETOOTH_CONNECT"


[dependencies]
miniquad = { version = "0.3", features = ["log-impl"] }
once_cell = "1.12"
quad-androidx = { version = "0.1" }

[dev-dependencies]
macroquad = {version ="0.3", default_features = false }

#[patch.crates-io]
#miniquad = { path = '../miniquad' }
#macroquad = { path = '../macroquad' }
